--- a/style.css
+++ b/style.css
@@ -2,7 +2,8 @@ style.css
 
 body {
     display: flex;
-    
+    text-align: center;
+
 }
 
 .header{
@@ -12,8 +13,8 @@ body {
     padding: 20px;
     color: white;
     background-color: black;
-    padding-right: 450px;
-    padding-left: 300px;
+    padding-right: 500px;
+    padding-left: 500px;
     padding-bottom: 50px;
     
 }
@@ -39,15 +40,15 @@ a{
     display: flex;
     justify-content: center;
     justify-content: space-between;
-    padding-right: 450px;
-    padding-left: 300px;
+    padding-right: 500px;
+    padding-left: 500px;
     align-items: center;
     padding-bottom: 60px;
     
 }
 .overwatch{
     font-weight: 700;
-    font-size: 24px;
+    font-size: 36px;
     padding-bottom: 8px;
 }
 
@@ -63,4 +64,31 @@ a{
     color: white;
     background-color: blue;
     border: 0px;
+}
+.tracer img{
+    height: 400px;
+    padding-right: 100px;
+}
+
+.container{
+    display: flex;
+    justify-content: center;
+    gap: 80px;
+    background-color: grey;
+    text-align: center;
+    
+}
+
+.role{
+    padding: 32px;
+    text-align: center;
+    background-color: grey;
+}
+
+.text{
+    max-width: 200px;
+    text-align: center;
+    background-color: grey;
+    
+    
 }
